<resources>
    <string name="app_name">Qalandia</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Qalndia_Title">قلنديا</string>
    <string name="sub_Title">الوضع</string>

    <string name="out">خارج من رام الله</string>

    <string name="in">الداخل على رام الله</string>

    <string name="close">مغلق</string>


    <string name="not_bad">أزمة خفيفة</string>


    <string name="can_go">سالك</string>


    <string name="bad">أزمة خانقة</string>
    <string name="yellow_car">yellow_car</string>
    <string name="red_car">red_car</string>

    <string name="Hezma_Title">حزما</string>
    <string name="landing_page_title">قائمة الحواجز</string>

    <string name="jab3_title">جبع</string>

    <string name="DCO_title">DCO</string>
    <string name="title_activity_regions__situation">Regions_Situation</string>

    <string name="back">قائمة الحواجز</string>
    <string name="back_button">back_button</string>

    <string name="Riogons_Title_Text">Riogons_Title</string>
    <string name="title_activity_every_situation">everySituation</string>
    <string name="title_activity_in_situation">inSituation</string>
    <string name="title_activity_out_situation">outSituation</string>
    <string name="add_title">كيف الوضع؟</string>
    <string name="exit_modal">exit modal</string>
    <string name="car_status">car_status</string>


    <color name="gray">#FFFFFF</color>
</resources>
