<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Qalndia_Title"
        android:id="@+id/checkPointTitle"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="#499CDC"
        android:gravity="right"
        android:layout_gravity="right" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sub_Title"
        android:id="@+id/statusTitle"
        android:textColor="#7100B7"
        android:textSize="20sp"
        android:layout_gravity="right" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:baselineAligned="false"
        android:layout_marginTop="10dp"
        android:paddingBottom="10dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/out"
                android:id="@+id/textView19"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_gravity="right" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="5dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/not_bad"
                    android:id="@+id/outText"
                    android:textColor="#000000"
                    android:paddingRight="5dp"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/outCar"
                    android:src="@mipmap/yellow"
                    android:contentDescription="@string/yellow_car" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/in"
                android:id="@+id/textView21"
                android:textColor="#000000"
                android:layout_gravity="right"
                android:textSize="20dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="5dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/close"
                    android:id="@+id/inText"
                    android:textColor="#000000"
                    android:paddingRight="5dp"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/inCar"
                    android:src="@mipmap/red"
                    android:contentDescription="@string/red_car" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>