<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@android:id/tabhost"
android:layout_width="fill_parent"
android:layout_height="fill_parent">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <RelativeLayout
        android:id="@+id/welcome"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:layout_width="fill_parent"
            android:id="@+id/toolTip_Regoins"
            android:layout_height="?attr/actionBarSize"
            android:background="#499CDC" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:baselineAligned="false"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:weightSum="3"
            android:id="@+id/header"
            android:focusableInTouchMode="false">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:id="@+id/backButton"
                android:layout_weight="1"
                android:clickable="true">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="25dp"
                    android:id="@+id/back_arrow"
                    android:src="@mipmap/slideshow_arrow_left"
                    android:contentDescription="@string/back_button"
                    android:duplicateParentState="true"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/back"
                    android:id="@+id/back_arrow_text"
                    android:textColor="#FFFFFF"
                    android:duplicateParentState="true"
                    android:layout_gravity="center"
                    android:layout_marginLeft="-10dp"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:layout_gravity="center"
                android:layout_weight="1.5">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/landing_page_title"
                    android:id="@+id/title_app_regions"
                    android:textSize="25sp"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:layout_gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:layout_gravity="center"
                android:layout_weight="0.5" >

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="25dp"
                    android:id="@+id/addSituation"
                    android:src="@mipmap/plus"
                    android:layout_gravity="right" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@id/welcome"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <TabWidget
            android:id="@android:id/tabs"
            android:layout_alignParentTop="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@android:id/tabs"/>
    </RelativeLayout>
</RelativeLayout>
</TabHost>